# 42_python_for_data_science_piscine-0_starting

./: README.md
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py  building_test.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  config.py  tester.py
ex09/: ft_package.py  pyproject.toml
